feat: Integrate Google Tag Manager (GTM-T9M5VNTT) with Next.js app

--- a/luckygen/env.template
+++ b/luckygen/env.template
@@ -4,3 +4,7 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
 
 # Site Configuration
 NEXT_PUBLIC_SITE_URL=https://luckygen.click
+
+# Analytics
+NEXT_PUBLIC_GTM_ID=GTM-XXXXXXX
+NEXT_PUBLIC_ADSENSE_ID=ca-pub-XXXXXXXXXXXXXXXX
