Perf: Optimize render blocking scripts and add preconnect

--- a/luckygen/package.json
+++ b/luckygen/package.json
@@ -35,5 +35,12 @@
     "eslint-config-next": "16.1.1",
     "tailwindcss": "^4",
     "typescript": "^5"
-  }
+  },
+  "browserslist": [
+    "defaults",
+    "not IE 11",
+    "not PB < 22",
+    "> 0.5%",
+    "last 2 versions"
+  ]
 }
